# KDE.Plasma5.Widget.GlobalMMMenu

./: .gitignore  KDE.sln  README.md  install.sh  nohup.out
.github/: copilot-instructions.md
DBusService/DBusService/: AtSpiMenuReader.cs  DBusService.csproj  GlobalMenuExporter.cs  GtkMenuReader.cs  IActiveWindowMonitor.cs  Program.cs  Worker.cs  appsettings.Development.json  appsettings.json  globalmmmenu.service
DBusService/DBusService/DBus/: AppMenuRegistrarImpl.cs  IAppMenuRegistrar.cs  IAtSpi.cs  IDbusMenu.cs  IFreedesktopDBus.cs  IGlobalMenuService.cs  IIntrospectable.cs  IKAppMenu.cs  IKWin.cs
DBusService/DBusService/Properties/: launchSettings.json
DBusService/DBusService/Wayland/: WaylandWindowMonitor.cs
DBusService/DBusService/X11/: NativeMethods.cs  X11ActiveWindowMonitor.cs
GlobalMMMenu/: metadata.json
GlobalMMMenu/contents/ui/: main.qml
GlobalMMMenuPlugin/: CMakeLists.txt  qmldir
GlobalMMMenuPlugin/src/: globalmenuhelper.cpp  globalmenuhelper.h  iconprovider.cpp  iconprovider.h  plugin.cpp  plugin.h
